--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -628,7 +628,7 @@
             margin: 30px 0 0 0;
             .row_data{
                 padding: 15px 0;
-                box-shadow: inset 0px -1px 0px #E4E5E7;
+                //box-shadow: inset 0px -1px 0px #E4E5E7;
                 .title{
                     font-weight: normal;
                     font-size: 14px;
@@ -637,6 +637,9 @@
                 .toggle-label{
 
                 }
+            }
+            .schedule-box{
+                box-shadow: inset 0px -1px 0px #E4E5E7;
             }
         }
         .allow-list-data-label{
