--- a/findly-builder/src/app/components/business-rules/business-rules.component.html
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.html
@@ -66,7 +66,7 @@
                 <div class="col-3 content">
                     <ng-container *ngFor="let rule of ruleObj.rules; let ruleIndex = index">
                     <span class="divider mr-1 mb-1" *ngIf="ruleIndex > 0">{{'and_caps' | translate}}</span> 
-                    <span class="tags-input mr-1 mb-1"><span class="small-text">{{rule.contextType}} :</span> {{rule.contextCategory}}</span>
+                    <span class="tags-input mr-1 mb-1"><span class="small-text">{{'businessRules.' + rule.contextType | translate}} :</span> {{ 'businessRules.' + rule.contextCategory | translate}}</span>
                     <span class="outer-name mr-1 mb-1">{{rule.operator}}</span>
                     <ng-container *ngFor="let value of rule.value; let valueIndex = index">
                     <span class="tags-input mr-1 mb-1" >{{value}}</span>
