--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -192,8 +192,8 @@
             .main-title{
                 padding-left: 15px;
                 color: #202124;
-                font-weight: bold;
-                font-size: 20px;
+                font-weight: 600;
+                font-size: 16px;
             }
             .webDomain{    
                 padding: 15px;   
