--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -601,6 +601,12 @@
                 }
             }
         }
+        .input-paddings {
+            margin-top: 15px;
+        }
+        .group-checkbox{
+            margin-top: 30px;
+        }
         .site-map-url-sec{
             margin: 30px 0;
             .label_text{
@@ -640,6 +646,7 @@
             }
             .schedule-box{
                 box-shadow: inset 0px -1px 0px #E4E5E7;
+                padding-bottom: 1px;
             }
         }
         .allow-list-data-label{
@@ -667,7 +674,7 @@
             padding: 19px 10px 19px 20px;
             margin: 0 0 20px 0;
             background: #FFFFFF;
-            border: 1px solid #BDC1C6;
+            //border: 1px solid #BDC1C6;
             box-sizing: border-box;
             border-radius: 4px;
             .title{
@@ -692,13 +699,13 @@
             }
         }
         .allow-urlBox{
-            margin: 0px 0px -1px 0px;
+            margin: 0px 0px -30px 0px;
             border-radius: 4px 4px 0px 0px;
         }
         .alw-list-bor{
             margin: 0px 0px -1px 0px;
             border-radius: 0px 0px 0px 0px !important;
-            border: 1px solid #bdc1c6;
+            //border: 1px solid #bdc1c6;
             border-bottom: none;
         }
         .last-record{
@@ -708,7 +715,7 @@
         .path-data{
             padding: 14px 20px;
             background: #FFFFFF;
-            border: 1px solid #E4E5E7;
+            //border: 1px solid #E4E5E7;
             box-sizing: border-box;
             border-radius: 4px;
             .title{
