--- a/findly-builder/src/app/components/add-source/add-source.component.html
+++ b/findly-builder/src/app/components/add-source/add-source.component.html
@@ -12,13 +12,23 @@
         <div class="crawlContent row m-0 mb-4" *ngFor="let sourceCatagory of availableSources">
           <div class="col-12 main-title label_text">{{sourceCatagory.title}}</div>
           <div class="webDomain" (click)="selectSource(source)" *ngFor="let source of sourceCatagory.sources">
-            <div class="box-block">
+            <div class="box-block-flat">
+              <div class="row">
+                <div class="col-3" class="imageDiv"> <img src="{{source.icon}}"></div>
+                <div class="col-9 text-div">
+                  <img src="assets/icons/gray_info.svg" class="pl-1">
+                  <div class="title label_text m-0">{{source.name}}</div>
+                  <div >{{source.description}}</div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="box-block">
               <div class="title label_text m-0">{{source.name}}</div>
               <div class="imageDiv">
                 <img src="{{source.icon}}">
               </div>
               <div class="info-text">{{source.description}}</div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
