--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -213,7 +213,47 @@
                             color: #07377F;
                         }
                     }  
-                }    
+                } 
+                .box-block-flat{
+                    background: #FFFFFF;
+                    border: 1px solid #BDC1C6;
+                    box-sizing: border-box;
+                    border-radius: 6px;
+                    width: 313px;
+                    height: 94px;
+                    &:hover{                        
+                        border: 1px solid #85B7FE;
+                        background-color: #F3F8FF;
+                        .title{
+                            color: #07377F;
+                        }
+                        .info-text{
+                            color: #07377F;
+                        }
+                    }
+                    .title{
+                        color: #3C4043;
+                        font-size: 16px;
+                        font-weight: 600;
+                    }
+                    .text-div{
+                        padding-top: 20px;
+                    }
+                    .imageDiv{
+                        padding: 20px 0px 20px 30px;
+                        img{
+                            height: 47px;
+                            width: 47px;
+                        }
+                    }
+                    .info-text{
+                        color: #202124;             
+                        font-size: 14px;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                    }
+                }   
                 .box-block{
                     background: #fff;           
                     border-radius: 6px;
