--- a/findly-builder/src/app/components/summary/summary.component.html
+++ b/findly-builder/src/app/components/summary/summary.component.html
@@ -159,11 +159,11 @@
                   <div class="title-info">Total Users<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                   <div class="bottom-sec">
                       <div class="left-sec">
-                          <div class="count">{{ totalUsersStats.totalUsers || 80}}</div>
+                          <div class="count">{{ totalUsersStats.totalUsers}}</div>
                           <div class="data-percentage" [ngClass] ="{'failed' : totalUsersStats.percentageIncrease < 0}">
                               <img src="assets/icons/arrow-increase.svg" *ngIf="totalUsersStats.percentageIncrease >= 0">
                               <img src="assets/icons/arrow-decrease.svg" *ngIf="totalUsersStats.percentageIncrease < 0">
-                              <span class="percentage">{{ totalUsersStats.percentageIncrease || 12}}%</span>
+                              <span class="percentage">{{ totalUsersStats.percentageIncrease }}%</span>
                           </div>
                       </div>
                       <div class="right-sec">
@@ -178,11 +178,11 @@
                 <div class="title-info">Total Searches<img src="assets/icons/gray_info.svg" class="pl-1"></div>
                 <div class="bottom-sec">
                     <div class="left-sec">
-                        <div class="count">{{ totalSearchesStats.totalSearches || 2945}}</div> <!-- {{totalSearchSum}} -->
+                        <div class="count">{{ totalSearchesStats.totalSearches}}</div> <!-- {{totalSearchSum}} -->
                         <div class="data-percentage" [ngClass] ="{'failed' : totalSearchesStats.searchRate < 0}">
                             <img src="assets/icons/arrow-increase.svg" *ngIf="totalSearchesStats.searchRate >= 0">
                             <img src="assets/icons/arrow-decrease.svg" *ngIf="totalSearchesStats.searchRate < 0">
-                            <span class="percentage">{{ totalSearchesStats.searchRate || 8}}%</span>
+                            <span class="percentage">{{ totalSearchesStats.searchRate }}%</span>
                         </div>
                     </div>
                     <div class="right-sec">
@@ -197,11 +197,11 @@
               <div class="title-info">Result Rate<img src="assets/icons/gray_info.svg" class="pl-1"></div>
               <div class="bottom-sec">
                   <div class="left-sec">
-                      <div class="count">{{totalSearchesStats.resultRate || 7}}%</div>
+                      <div class="count">{{totalSearchesStats.resultRate }}%</div>
                       <div class="data-percentage " [ngClass] ="{'failed' : totalSearchesStats.increasedResultRate < 0}">
                           <img src="assets/icons/arrow-increase.svg" *ngIf="totalSearchesStats.increasedResultRate >= 0">
                           <img src="assets/icons/arrow-decrease.svg" *ngIf="totalSearchesStats.increasedResultRate < 0">
-                          <span class="percentage">{{totalSearchesStats.increasedResultRate || 3}}%</span>
+                          <span class="percentage">{{totalSearchesStats.increasedResultRate}}%</span>
                       </div>
                   </div>
                   <div class="right-sec">
@@ -267,14 +267,24 @@
               <div class="col-6 create_link">+ Create New Experiment</div>
             </div>
           </div>
-          <div class="config-channels">
+          <div class="config-channels" *ngIf="channelExist; else elseBlock">
             <div class="main-title">Configured Channels</div>
             <div class="config-card">
               <div class="img-block"><img src="assets/icons/web-mobile.svg"></div>
               <div class="title">Web / Mobile Client</div>
             </div>
+           
             <div class="show-all-channels-link">Show All Channels</div>
           </div>
+          <ng-template #elseBlock>
+            <div class="experment_data">
+              <div class="main-title">Configured Channels</div>
+              <div class="row m-0 columns-data">
+                <div class="col-6 title">No Configured Channels</div>
+                <div class="col-6 create_link">+ Click to Configure Channels</div>
+              </div>
+            </div>
+          </ng-template>
       </div>
     </div>
   </perfect-scrollbar>  
